feat:운영서버에 클릭하우스랑 ai서버 사용안하게 셋팅