@@ -1,6 +1,6 @@
 package com.sleekydz86.emrclinical.ai.service;
 
-import com.sleekydz86.core.common.exception.custom.NotFoundException;
+import com.sleekydz86.core.audit.service.AuditService;
 import com.sleekydz86.domain.patient.entity.PatientEntity;
 import com.sleekydz86.domain.patient.service.PatientService;
 import com.sleekydz86.emrclinical.ai.dto.AnomalyDetectionResponse;
@@ -19,8 +19,12 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @Service
@@ -31,8 +35,9 @@ public class AIAnalysisService {
     private final TreatmentRepository treatmentRepository;
     private final CheckInRepository checkInRepository;
     private final PatientService patientService;
+    private final AuditService auditService;
 
-    public TreatmentPatternAnalysisResponse analyzeTreatmentPatterns(TreatmentPatternAnalysisRequest request) {
+    public TreatmentPatternAnalysisResponse analyzeTreatmentPatterns(Long userId, TreatmentPatternAnalysisRequest request) {
         LocalDateTime startDateTime = request.getStartDate().atStartOfDay();
         LocalDateTime endDateTime = request.getEndDate().atTime(23, 59, 59);
 
@@ -46,38 +51,35 @@ public class AIAnalysisService {
                 endDateTime
         );
 
-        Map<String, Integer> typeDistribution = treatments.stream()
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentType() != null ? t.getTreatmentType().name() : "UNKNOWN",
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+        Map<String, Integer> typeDistribution = toCountMap(
+                treatments.stream()
+                        .map(treatment -> treatment.getTreatmentType() != null
+                                ? treatment.getTreatmentType().name()
+                                : "UNKNOWN")
+                        .toList());
 
-        Map<String, Integer> departmentDistribution = treatments.stream()
-                .filter(t -> t.getTreatmentDept() != null)
-                .collect(Collectors.groupingBy(
-                        TreatmentEntity::getTreatmentDept,
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+        Map<String, Integer> departmentDistribution = toCountMap(
+                treatments.stream()
+                        .filter(treatment -> treatment.getTreatmentDept() != null)
+                        .map(TreatmentEntity::getTreatmentDept)
+                        .toList());
 
-        Map<String, Integer> doctorDistribution = treatments.stream()
-                .filter(t -> t.getTreatmentDoc() != null)
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentDoc().getName(),
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+        Map<String, Integer> doctorDistribution = toCountMap(
+                treatments.stream()
+                        .filter(treatment -> treatment.getTreatmentDoc() != null)
+                        .map(treatment -> treatment.getTreatmentDoc().getName())
+                        .toList());
 
-        Map<String, Integer> dailyTrend = treatments.stream()
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentDate().toLocalDate().toString(),
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+        Map<String, Integer> dailyTrend = toCountMap(
+                treatments.stream()
+                        .map(treatment -> treatment.getTreatmentDate().toLocalDate().toString())
+                        .toList());
 
-        List<TreatmentPatternAnalysisResponse.Insight> insights = generateInsights(
-                typeDistribution, departmentDistribution, doctorDistribution, treatments);
+        List<TreatmentPatternAnalysisResponse.Insight> insights =
+                generatePatternInsights(typeDistribution, departmentDistribution, doctorDistribution, treatments.size());
 
-        long daysBetween = java.time.temporal.ChronoUnit.DAYS.between(request.getStartDate(), request.getEndDate()) + 1;
-
-        return TreatmentPatternAnalysisResponse.builder()
+        long daysBetween = ChronoUnit.DAYS.between(request.getStartDate(), request.getEndDate()) + 1;
+        TreatmentPatternAnalysisResponse response = TreatmentPatternAnalysisResponse.builder()
                 .period(daysBetween + "일")
                 .totalTreatments(treatments.size())
                 .typeDistribution(typeDistribution)
@@ -86,20 +88,116 @@ public class AIAnalysisService {
                 .dailyTrend(dailyTrend)
                 .insights(insights)
                 .build();
+
+        Map<String, Object> sourceData = new LinkedHashMap<>();
+        sourceData.put("sourceDatabase", "MYSQL");
+        sourceData.put("startDateTime", startDateTime);
+        sourceData.put("endDateTime", endDateTime);
+        sourceData.put("doctorId", request.getDoctorId());
+        sourceData.put("departmentId", request.getDepartmentId());
+        sourceData.put("treatmentCount", treatments.size());
+
+        Map<String, Object> responseSummary = new LinkedHashMap<>();
+        responseSummary.put("typeBucketCount", typeDistribution.size());
+        responseSummary.put("departmentBucketCount", departmentDistribution.size());
+        responseSummary.put("doctorBucketCount", doctorDistribution.size());
+        responseSummary.put("insightCount", insights.size());
+
+        auditUsage(userId, "TREATMENT_PATTERN_ANALYSIS", request, sourceData, responseSummary);
+        return response;
     }
 
-    public PatientHistoryAnalysisResponse analyzePatientHistory(Long patientNo) {
-        PatientEntity patient = patientService.getPatientByNo(patientNo);
+    public PatientHistoryAnalysisResponse analyzePatientHistory(Long userId, Long patientNo) {
+        return analyzePatientHistoryInternal(patientNo, userId, true);
+    }
 
+    PatientHistoryAnalysisResponse analyzePatientHistoryInternal(Long patientNo) {
+        return analyzePatientHistoryInternal(patientNo, null, false);
+    }
+
+    public AnomalyDetectionResponse detectAnomalies(Long userId) {
+        LocalDate endDate = LocalDate.now();
+        LocalDate startDate = endDate.minusDays(7);
+
+        LocalDateTime startDateTime = startDate.atStartOfDay();
+        LocalDateTime endDateTime = endDate.atTime(23, 59, 59);
+        List<TreatmentEntity> treatments = treatmentRepository.findByConditions(
+                null,
+                null,
+                null,
+                null,
+                null,
+                startDateTime,
+                endDateTime
+        );
+
+        List<AnomalyDetectionResponse.Anomaly> anomalies = new ArrayList<>();
+        if (!treatments.isEmpty()) {
+            double averagePerDay = (double) treatments.size() / 7.0;
+            Map<LocalDate, Integer> dailyCount = new LinkedHashMap<>();
+            for (TreatmentEntity treatment : treatments) {
+                LocalDate treatmentDate = treatment.getTreatmentDate().toLocalDate();
+                dailyCount.merge(treatmentDate, 1, Integer::sum);
+            }
+
+            dailyCount.forEach((date, count) -> {
+                if (count > averagePerDay * 2) {
+                    anomalies.add(AnomalyDetectionResponse.Anomaly.builder()
+                            .type("spike")
+                            .date(date)
+                            .count(count)
+                            .message(String.format("%s 진료 건수가 평균 %.1f건 대비 급증했습니다.", date, averagePerDay))
+                            .build());
+                }
+            });
+
+            long emergencyCount = treatments.stream()
+                    .filter(treatment -> treatment.getTreatmentType() == TreatmentType.EMERGENCY)
+                    .count();
+            double emergencyRatio = (double) emergencyCount / treatments.size();
+            if (emergencyRatio > 0.5 && treatments.size() > 10) {
+                anomalies.add(AnomalyDetectionResponse.Anomaly.builder()
+                        .type("ratio")
+                        .message(String.format("응급 진료 비율이 %.1f%%로 높게 탐지되었습니다.", emergencyRatio * 100))
+                        .build());
+            }
+        }
+
+        AnomalyDetectionResponse response = AnomalyDetectionResponse.builder()
+                .anomalies(anomalies)
+                .totalDetected(anomalies.size())
+                .build();
+
+        Map<String, Object> sourceData = new LinkedHashMap<>();
+        sourceData.put("sourceDatabase", "MYSQL");
+        sourceData.put("startDate", startDate);
+        sourceData.put("endDate", endDate);
+        sourceData.put("treatmentCount", treatments.size());
+        sourceData.put("emergencyCount", treatments.stream()
+                .filter(treatment -> treatment.getTreatmentType() == TreatmentType.EMERGENCY)
+                .count());
+
+        Map<String, Object> responseSummary = new LinkedHashMap<>();
+        responseSummary.put("anomalyCount", anomalies.size());
+
+        auditUsage(userId, "ANOMALY_DETECTION", Map.of("windowDays", 7), sourceData, responseSummary);
+        return response;
+    }
+
+    private PatientHistoryAnalysisResponse analyzePatientHistoryInternal(Long patientNo, Long userId, boolean auditEnabled) {
+        PatientEntity patient = patientService.getPatientByNo(patientNo);
         List<CheckInEntity> checkIns = checkInRepository.findByConditions(patientNo, null, null, null, null);
         List<Long> checkInIds = checkIns.stream()
                 .map(CheckInEntity::getCheckInId)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<TreatmentEntity> treatments = treatmentRepository.findByCheckInIds(checkInIds);
+        List<TreatmentEntity> treatments = checkInIds.isEmpty()
+                ? Collections.emptyList()
+                : treatmentRepository.findByCheckInIds(checkInIds);
 
+        PatientHistoryAnalysisResponse response;
         if (treatments.isEmpty()) {
-            return PatientHistoryAnalysisResponse.builder()
+            response = PatientHistoryAnalysisResponse.builder()
                     .patientNo(patientNo)
                     .patientName(patient.getPatientName())
                     .totalTreatments(0)
@@ -113,170 +211,129 @@ public class AIAnalysisService {
                             .build())
                     .insights(Collections.emptyList())
                     .build();
-        }
+        } else {
+            Map<String, Integer> typeDistribution = toCountMap(
+                    treatments.stream()
+                            .map(treatment -> treatment.getTreatmentType() != null
+                                    ? treatment.getTreatmentType().name()
+                                    : "UNKNOWN")
+                            .toList());
 
-        Map<String, Integer> typeDistribution = treatments.stream()
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentType() != null ? t.getTreatmentType().name() : "UNKNOWN",
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+            Map<String, Integer> departmentDistribution = toCountMap(
+                    treatments.stream()
+                            .filter(treatment -> treatment.getTreatmentDept() != null)
+                            .map(TreatmentEntity::getTreatmentDept)
+                            .toList());
 
-        Map<String, Integer> departmentDistribution = treatments.stream()
-                .filter(t -> t.getTreatmentDept() != null)
-                .collect(Collectors.groupingBy(
-                        TreatmentEntity::getTreatmentDept,
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+            Map<String, Integer> doctorDistribution = toCountMap(
+                    treatments.stream()
+                            .filter(treatment -> treatment.getTreatmentDoc() != null)
+                            .map(treatment -> treatment.getTreatmentDoc().getName())
+                            .toList());
 
-        Map<String, Integer> doctorDistribution = treatments.stream()
-                .filter(t -> t.getTreatmentDoc() != null)
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentDoc().getName(),
-                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
-                ));
+            List<LocalDate> dates = treatments.stream()
+                    .map(treatment -> treatment.getTreatmentDate().toLocalDate())
+                    .sorted()
+                    .toList();
 
-        List<LocalDate> dates = treatments.stream()
-                .map(t -> t.getTreatmentDate().toLocalDate())
-                .sorted()
-                .collect(Collectors.toList());
+            PatientHistoryAnalysisResponse.RevisitPattern revisitPattern = analyzeRevisitPattern(dates);
+            List<PatientHistoryAnalysisResponse.Insight> insights = generatePatientInsights(treatments, revisitPattern);
 
-        PatientHistoryAnalysisResponse.RevisitPattern revisitPattern = analyzeRevisitPattern(dates);
-
-        List<PatientHistoryAnalysisResponse.Insight> insights = generatePatientInsights(treatments, revisitPattern);
-
-        return PatientHistoryAnalysisResponse.builder()
-                .patientNo(patientNo)
-                .patientName(patient.getPatientName())
-                .totalTreatments(treatments.size())
-                .firstVisit(dates.isEmpty() ? null : dates.get(0))
-                .lastVisit(dates.isEmpty() ? null : dates.get(dates.size() - 1))
-                .typeDistribution(typeDistribution)
-                .departmentDistribution(departmentDistribution)
-                .doctorDistribution(doctorDistribution)
-                .revisitPattern(revisitPattern)
-                .insights(insights)
-                .build();
-    }
-
-    public AnomalyDetectionResponse detectAnomalies() {
-        LocalDate endDate = LocalDate.now();
-        LocalDate startDate = endDate.minusDays(7);
-
-        LocalDateTime startDateTime = startDate.atStartOfDay();
-        LocalDateTime endDateTime = endDate.atTime(23, 59, 59);
-
-        List<TreatmentEntity> treatments = treatmentRepository.findByConditions(
-                null, null, null, null, null, startDateTime, endDateTime
-        );
-
-        List<AnomalyDetectionResponse.Anomaly> anomalies = new ArrayList<>();
-
-        if (treatments.isEmpty()) {
-            return AnomalyDetectionResponse.builder()
-                    .anomalies(Collections.emptyList())
-                    .totalDetected(0)
+            response = PatientHistoryAnalysisResponse.builder()
+                    .patientNo(patientNo)
+                    .patientName(patient.getPatientName())
+                    .totalTreatments(treatments.size())
+                    .firstVisit(dates.get(0))
+                    .lastVisit(dates.get(dates.size() - 1))
+                    .typeDistribution(typeDistribution)
+                    .departmentDistribution(departmentDistribution)
+                    .doctorDistribution(doctorDistribution)
+                    .revisitPattern(revisitPattern)
+                    .insights(insights)
                     .build();
         }
 
-        double avgPerDay = (double) treatments.size() / 7.0;
+        if (auditEnabled) {
+            Map<String, Object> sourceData = new LinkedHashMap<>();
+            sourceData.put("sourceDatabase", "MYSQL");
+            sourceData.put("patientNo", patientNo);
+            sourceData.put("patientName", patient.getPatientName());
+            sourceData.put("checkInCount", checkIns.size());
+            sourceData.put("treatmentCount", treatments.size());
 
-        Map<LocalDate, Long> dailyCount = treatments.stream()
-                .collect(Collectors.groupingBy(
-                        t -> t.getTreatmentDate().toLocalDate(),
-                        Collectors.counting()
-                ));
+            Map<String, Object> responseSummary = new LinkedHashMap<>();
+            responseSummary.put("firstVisit", response.getFirstVisit());
+            responseSummary.put("lastVisit", response.getLastVisit());
+            responseSummary.put("revisitFrequency",
+                    response.getRevisitPattern() != null ? response.getRevisitPattern().getFrequency() : null);
+            responseSummary.put("insightCount", response.getInsights() != null ? response.getInsights().size() : 0);
 
-        dailyCount.forEach((date, count) -> {
-            if (count > avgPerDay * 2) {
-                anomalies.add(AnomalyDetectionResponse.Anomaly.builder()
-                        .type("spike")
-                        .date(date)
-                        .count(count.intValue())
-                        .message(String.format("%s: 평균(%.1f건) 대비 %d건으로 급증", 
-                                date, avgPerDay, count))
-                        .build());
-            }
-        });
-
-        long emergencyCount = treatments.stream()
-                .filter(t -> t.getTreatmentType() == TreatmentType.EMERGENCY)
-                .count();
-
-        double emergencyRatio = (double) emergencyCount / treatments.size();
-        if (emergencyRatio > 0.5 && treatments.size() > 10) {
-            anomalies.add(AnomalyDetectionResponse.Anomaly.builder()
-                    .type("ratio")
-                    .message(String.format("응급진료 비율이 %.1f%%로 비정상적으로 높습니다.", emergencyRatio * 100))
-                    .build());
+            auditUsage(userId, "PATIENT_HISTORY_ANALYSIS", Map.of("patientNo", patientNo), sourceData, responseSummary);
         }
 
-        return AnomalyDetectionResponse.builder()
-                .anomalies(anomalies)
-                .totalDetected(anomalies.size())
-                .build();
+        return response;
     }
 
-    private List<TreatmentPatternAnalysisResponse.Insight> generateInsights(
+    private Map<String, Integer> toCountMap(List<String> values) {
+        Map<String, Integer> counts = new LinkedHashMap<>();
+        for (String value : values) {
+            counts.merge(value, 1, Integer::sum);
+        }
+        return counts;
+    }
+
+    private List<TreatmentPatternAnalysisResponse.Insight> generatePatternInsights(
             Map<String, Integer> typeDistribution,
             Map<String, Integer> departmentDistribution,
             Map<String, Integer> doctorDistribution,
-            List<TreatmentEntity> treatments) {
-
+            int totalTreatments) {
         List<TreatmentPatternAnalysisResponse.Insight> insights = new ArrayList<>();
 
-        if (!typeDistribution.isEmpty()) {
-            String topType = typeDistribution.entrySet().stream()
-                    .max(Map.Entry.comparingByValue())
-                    .map(Map.Entry::getKey)
-                    .orElse("");
-
-            if (!topType.isEmpty()) {
-                int count = typeDistribution.get(topType);
-                double percentage = (double) count / treatments.size() * 100;
-                insights.add(TreatmentPatternAnalysisResponse.Insight.builder()
-                        .type("info")
-                        .title("가장 많은 진료 유형")
-                        .message(String.format("%s: %d건 (%.1f%%)", getTypeLabel(topType), count, percentage))
-                        .build());
-            }
-        }
-
-        if (!departmentDistribution.isEmpty()) {
-            String topDept = departmentDistribution.entrySet().stream()
-                    .max(Map.Entry.comparingByValue())
-                    .map(Map.Entry::getKey)
-                    .orElse("");
-
-            if (!topDept.isEmpty()) {
-                int count = departmentDistribution.get(topDept);
-                insights.add(TreatmentPatternAnalysisResponse.Insight.builder()
-                        .type("warning")
-                        .title("가장 바쁜 진료과")
-                        .message(String.format("%s: %d건 - 업무량 분산 검토 권장", topDept, count))
-                        .build());
-            }
-        }
+        addTopDistributionInsight(insights, "info", "가장 많은 진료 유형", typeDistribution, totalTreatments);
+        addTopDistributionInsight(insights, "warning", "가장 많은 진료과", departmentDistribution, totalTreatments);
 
         if (!doctorDistribution.isEmpty()) {
-            String topDoctor = doctorDistribution.entrySet().stream()
+            Map.Entry<String, Integer> topDoctor = doctorDistribution.entrySet().stream()
                     .max(Map.Entry.comparingByValue())
-                    .map(Map.Entry::getKey)
-                    .orElse("");
-
-            if (!topDoctor.isEmpty()) {
-                int count = doctorDistribution.get(topDoctor);
-                double ratio = (double) count / treatments.size();
-                if (ratio > 0.3) {
+                    .orElse(null);
+            if (topDoctor != null && totalTreatments > 0) {
+                double ratio = (double) topDoctor.getValue() / totalTreatments;
+                if (ratio >= 0.3) {
                     insights.add(TreatmentPatternAnalysisResponse.Insight.builder()
                             .type("warning")
-                            .title("업무량 집중")
-                            .message(String.format("%s 의사: %d건 - 업무 분산 권장", topDoctor, count))
+                            .title("진료 담당 집중도")
+                            .message(String.format("%s 의사가 전체 진료의 %.1f%%를 담당했습니다.", topDoctor.getKey(), ratio * 100))
                             .build());
                 }
             }
         }
 
         return insights;
+    }
+
+    private void addTopDistributionInsight(
+            List<TreatmentPatternAnalysisResponse.Insight> insights,
+            String type,
+            String title,
+            Map<String, Integer> distribution,
+            int totalTreatments) {
+        if (distribution.isEmpty() || totalTreatments == 0) {
+            return;
+        }
+
+        Map.Entry<String, Integer> topEntry = distribution.entrySet().stream()
+                .max(Map.Entry.comparingByValue())
+                .orElse(null);
+        if (topEntry == null) {
+            return;
+        }
+
+        double percentage = (double) topEntry.getValue() / totalTreatments * 100;
+        insights.add(TreatmentPatternAnalysisResponse.Insight.builder()
+                .type(type)
+                .title(title)
+                .message(String.format("%s 비중이 %.1f%%입니다.", topEntry.getKey(), percentage))
+                .build());
     }
 
     private PatientHistoryAnalysisResponse.RevisitPattern analyzeRevisitPattern(List<LocalDate> dates) {
@@ -290,16 +347,22 @@ public class AIAnalysisService {
 
         List<Double> intervals = new ArrayList<>();
         for (int i = 1; i < dates.size(); i++) {
-            long days = java.time.temporal.ChronoUnit.DAYS.between(dates.get(i - 1), dates.get(i));
-            intervals.add((double) days);
+            intervals.add((double) ChronoUnit.DAYS.between(dates.get(i - 1), dates.get(i)));
         }
 
-        double avgInterval = intervals.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
-        String frequency = avgInterval < 30 ? "high" : avgInterval < 90 ? "medium" : "low";
+        double averageInterval = intervals.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
+        String frequency;
+        if (averageInterval < 30) {
+            frequency = "high";
+        } else if (averageInterval < 90) {
+            frequency = "medium";
+        } else {
+            frequency = "low";
+        }
 
         return PatientHistoryAnalysisResponse.RevisitPattern.builder()
                 .frequency(frequency)
-                .averageDays((int) Math.round(avgInterval))
+                .averageDays((int) Math.round(averageInterval))
                 .intervals(intervals)
                 .build();
     }
@@ -307,41 +370,40 @@ public class AIAnalysisService {
     private List<PatientHistoryAnalysisResponse.Insight> generatePatientInsights(
             List<TreatmentEntity> treatments,
             PatientHistoryAnalysisResponse.RevisitPattern revisitPattern) {
-
         List<PatientHistoryAnalysisResponse.Insight> insights = new ArrayList<>();
 
         if ("high".equals(revisitPattern.getFrequency())) {
             insights.add(PatientHistoryAnalysisResponse.Insight.builder()
                     .type("info")
-                    .message("빈번한 재방문 패턴이 감지되었습니다. 정기적인 모니터링이 필요할 수 있습니다.")
+                    .message("재방문 주기가 짧아 지속 관찰이 필요한 환자 패턴으로 보입니다.")
                     .build());
         }
 
         long emergencyCount = treatments.stream()
-                .filter(t -> t.getTreatmentType() == TreatmentType.EMERGENCY)
+                .filter(treatment -> treatment.getTreatmentType() == TreatmentType.EMERGENCY)
                 .count();
-
-        if (emergencyCount > 2) {
+        if (emergencyCount >= 2) {
             insights.add(PatientHistoryAnalysisResponse.Insight.builder()
                     .type("warning")
-                    .message("응급진료 이력이 많습니다. 지속적인 관리가 필요합니다.")
+                    .message("응급 진료 이력이 반복되어 추가 모니터링이 필요합니다.")
                     .build());
         }
 
         return insights;
     }
 
-    private String getTypeLabel(String type) {
-        try {
-            TreatmentType treatmentType = TreatmentType.valueOf(type);
-            return switch (treatmentType) {
-                case IN -> "입원진료";
-                case OUT -> "외래진료";
-                case EMERGENCY -> "응급진료";
-            };
-        } catch (IllegalArgumentException e) {
-            return type;
+    private void auditUsage(Long userId, String entityId, Object requestData, Object sourceData, Object responseSummary) {
+        if (userId == null) {
+            return;
         }
+
+        Map<String, Object> beforeData = new LinkedHashMap<>();
+        beforeData.put("request", requestData);
+        beforeData.put("sourceData", sourceData);
+
+        Map<String, Object> afterData = new LinkedHashMap<>();
+        afterData.put("responseSummary", responseSummary);
+
+        auditService.logAudit(userId, "AI_USAGE", "AI", entityId, beforeData, afterData, null, null);
     }
 }
-
